--- a/podman/backend/Containerfile
+++ b/podman/backend/Containerfile
@@ -1,12 +1,13 @@
 
 FROM python:3.13-slim-bookworm
 
-WORKDIR /agent_app
+WORKDIR /agent_app_backend
 
 COPY src/requirements.txt .
 COPY src ./src
 
-RUN apt update && apt install -y xvfb
-RUN pip install --no-cache-dir -r requirements.txt && python3 -m playwright install --with-deps chromium
+RUN apt update
+RUN pip install --no-cache-dir -r requirements.txt
+RUN python3 -m playwright install --with-deps chromium
 
-CMD ["python3", "src/agent_api.py"]
+# CMD ["python3", "src/agent_api.py"]
