--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -19,7 +19,9 @@ services:
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
 
-    command: python src/agent_api.py
+    command: python src/ws_agent_server.py
+
+    pod: agent-pod
 
   agent-frontend:
     build:
@@ -36,6 +38,14 @@ services:
 
     command: streamlit run ui/agent_ui.py
 
+    pod: agent-pod
+
 secrets:
   autologin-env:
     external: true
+
+pods:
+  agent-pod:
+    ports:
+      - "8080:8080"
+      - "8501:8501"
