--- a/podman/backend/Containerfile
+++ b/podman/backend/Containerfile
@@ -10,4 +10,4 @@ RUN apt update
 RUN pip install --no-cache-dir -r requirements.txt
 RUN python3 -m playwright install --with-deps chromium
 
-# CMD ["python3", "src/agent_api.py"]
+CMD ["python3", "src/ws_agent_server.py"]
