--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,9 +7,9 @@ build-backend = "setuptools.build_meta"
 name = "agentic-backend"
 version = "0.1.0"
 description = "Agentic quotation system's backend server"
-readme = "../README.md"
-requires-python = "==3.13"
-license = { file = "../LICENSE" }
+readme = "./README.md"
+requires-python = ">=3.12,<3.13"
+license = { file = "./LICENSE" }
 
 authors = [
     { name = "Enrico Francesco Contessi" }
