--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -7,9 +7,9 @@ build-backend = "setuptools.build_meta"
 name = "agentic-frontend"
 version = "0.1.0"
 description = "Agentic quotation system's frontend"
-readme = "../README.md"
+readme = "README.md"
 requires-python = "==3.13"
-license = { file = "../LICENSE" }
+license = { file = "LICENSE" }
 
 authors = [
     { name = "Enrico Francesco Contessi" }
