--- a/shared/pyproject.toml
+++ b/shared/pyproject.toml
@@ -7,9 +7,7 @@ build-backend = "setuptools.build_meta"
 name = "agentic-shared"
 version = "0.1.0"
 description = "Agentic quotation system's shared resources"
-readme = "../README.md"
-requires-python = "==3.13"
-license = { file = "../LICENSE" }
+requires-python = ">=3.12,<3.13"
 
 authors = [
     { name = "Enrico Francesco Contessi" }
