--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -8,7 +8,7 @@ name = "agentic-frontend"
 version = "0.1.0"
 description = "Agentic quotation system's frontend"
 readme = "README.md"
-requires-python = "==3.13"
+requires-python = ">=3.13,<3.14"
 license = { file = "LICENSE" }
 
 authors = [
