Finished main work in backend (testing will be done...)

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,6 +38,10 @@ dependencies = [
     "python-dotenv==1.1.1",
     "requests==2.32.5",
 
+    "psycopg2==2.9.11",
+
+    "cryptography==46.0.3",
+
     "agentic-shared @ git+https://github.com/Henryk03/agentic-quotation-system.git#subdirectory=shared"
 ]
 
