--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "python-dotenv==1.1.1",
     "requests==2.32.5",
 
-    "psycopg2==2.9.11",
+    "asyncpg==0.31.0",
     "alembic==1.18.1",
 
     "cryptography==46.0.3",
