--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "requests==2.32.5",
     "websockets==15.0.1",
 
+    "python-dotenv==1.1.1",
+
     "pydantic==2.12.2",
 
     "playwright==1.55.0",
